# soroban-wasm-dl

./: .gitignore  README.md  getspec.js  getspec_bg.wasm  index.html  index.js  main.css  main.js
rust/: Cargo.toml  Makefile
rust/src/: lib.rs
