[package]
name = "getspec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-spec-rust = {version = "0.9.2"}
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
base64  = "0.21.2"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
